Revision history for Spreadsheet-HTML

1.21
    - sudoku javascript updated to check neighbors of current cell
    - checkerboard now accepts 'class' param (rotates class names)
    - checkers() moved and aliased to Spreadsheet::HTML::Presets::Draughts::draughts()

1.20
    - update copyright
    - require HTML::AutoTag v1.06

1.19
    - conway() warns if wechsler specified by module is not installed
    - fixed minor bug in calendar() when 'today' is actually today
    - removed animate() method/preset

1.18
    - added pad param for conway (used with wechsler)

1.17
    - added wechsler param for conway

1.16
    - require HTML::AutoTag v1.04
    - fixed JSON file load bug in Beadwork
    - update copyright date
    - minor refactor of _tag() to improve readability

1.15
    - worksheet param now selects specified image from animated PNG/GIF files
    - downloaded temp files are unlinked

1.14
    - file param now accepts URIs
    - alpha param more robust: can be lower cased and have "#" prepended to it
    - conway() now supplies alpha param (off param reverts to normal)

1.13
    - conway() can preload images now (TODO: guess "off" value)
    - off param now available when loading images
    - can override table param when loading images

1.12
    - data param now works with loaded image files
    - block param now can be 1 (previous minimum was 2)
    - added blend param (used in conjunction with block param)

1.11
    - can now load GIF, JPEG and PNG images
    - added block param for tweaking image2table output
    - remove bugtracker from Makefile (issues should go to rt.cpan)
    - trying to render invalid datastructures gracefully fails
    - require HTML::AutoTag v1.04

1.10
    - moved select() and list() tests out of distro

1.09
    - renamed some params for select() (see docs)
    - mktable help option can now inform about methods and parameters
    - select() option attr properly handles code refs & default items