@@ -1,6 +1,8 @@
 Revision history for Spreadsheet-HTML
 
 1.21
+    - update copyright
+    - fix select and list unit tests
     - sudoku javascript updated to check neighbors of current cell
     - checkerboard now accepts 'class' param (rotates class names)
     - checkers() moved and aliased to Spreadsheet::HTML::Presets::Draughts::draughts()
